--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         body { font-family: Arial, sans-serif; background: #f1f5f9; padding-bottom: 120px; }
         input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button { display: none; }
         input[type=number] { -moz-appearance: textfield; }
-        .header { position: sticky; top: 0; background: white; box-shadow: 0 2px 8px rgba(0,0,0,0.1); padding: 16px 20px; display: flex; justify-content: space-between; align-items: center; z-index: 100; }
-        .header-left { display: flex; align-items: center; gap: 8px; max-width: 70%; }
-        .header h1 { font-size: 18px; font-weight: bold; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
-        .status-badge { padding: 4px 12px; border-radius: 20px; font-size: 11px; font-weight: bold; white-space: nowrap; flex-shrink: 0; }
+        .header { position: sticky; top: 0; background: white; box-shadow: 0 2px 8px rgba(0,0,0,0.1); padding: 16px 20px; display: flex; justify-content: space-between; align-items: center; z-index: 100; flex-wrap: wrap; gap: 12px; }
+        .header-left { display: flex; align-items: center; gap: 8px; }
+        .header h1 { font-size: 18px; font-weight: bold; }
+        .status-badge { padding: 4px 12px; border-radius: 20px; font-size: 11px; font-weight: bold; white-space: nowrap; }
         .status-online { background: #10b981; color: white; }
         .status-offline { background: #ef4444; color: white; }
         .lang-switcher { display: flex; gap: 8px; }
