--- a/index.html
+++ b/index.html
@@ -14,16 +14,13 @@
         body { font-family: Arial, sans-serif; background: #f1f5f9; padding-bottom: 120px; }
         input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button { display: none; }
         input[type=number] { -moz-appearance: textfield; }
-        .header { position: sticky; top: 0; background: white; box-shadow: 0 2px 8px rgba(0,0,0,0.1); padding: 16px 20px; display: flex; justify-content: space-between; align-items: center; z-index: 100; gap: 12px; }
-        .header-left { display: flex; align-items: center; gap: 8px; flex: 1; min-width: 0; }
-        .header h1 { font-size: 18px; font-weight: bold; white-space: nowrap; }
-        @media (max-width: 640px) {
-            .header h1 { font-size: 14px; }
-        }
-        @media (max-width: 480px) {
-            .header h1 { font-size: 12px; }
-        }
+        .header { position: sticky; top: 0; background: white; box-shadow: 0 2px 8px rgba(0,0,0,0.1); padding: 16px 20px; display: flex; justify-content: space-between; align-items: center; z-index: 100; }
+        .header-left { display: flex; align-items: center; gap: 12px; }
+        .header h1 { font-size: 18px; font-weight: bold; }
         .status-badge { padding: 4px 12px; border-radius: 20px; font-size: 11px; font-weight: bold; white-space: nowrap; }
+        @media (max-width: 640px) {
+            .header h1 { font-size: 16px; }
+        }
         .status-online { background: #10b981; color: white; }
         .status-offline { background: #ef4444; color: white; }
         .lang-switcher { display: flex; gap: 8px; }
@@ -63,8 +60,8 @@
 <body>
     <div class="header">
         <div class="header-left">
-            <h1 id="headerTitle">Калькулятор доборных элементов</h1>
             <span id="statusBadge" class="status-badge status-online">Online</span>
+            <h1 id="headerTitle">Калькулятор доборных элементов</h1>
         </div>
         <div class="lang-switcher">
             <button class="lang-btn" onclick="setLang('kz', event)">KZ</button>
