Update service worker registration path

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 
     if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
-            navigator.serviceWorker.register('/sw.js').then(function(registration) {
+            navigator.serviceWorker.register('/Dobor-Calculator/sw.js').then(function(registration) {
                 console.log('ServiceWorker registered');
                 registration.addEventListener('updatefound', function() {
                     var newWorker = registration.installing;
